chore: documentação swagger e readme
