# back-end/controllers/consultaVacinaProtecao-controller.js
@@ -2,7 +2,7 @@ const db = require('../models/db');
 
 const consultaVacinaProtecaoController = async (req, res) => {
     try {
-        const { doenca_protecao } = req.body;
+        const doenca_protecao = req.params.protecao;
         const vacinas = await db.pesquisarVacinaPorProtecao(doenca_protecao);
         if (!vacinas || vacinas.length === 0) {
             return res.status(404).send('Nenhuma vacina encontrada para a proteção informada');
