# back-end/routes/routerConsultaVacinaProtecao.js
@@ -2,11 +2,11 @@ const express = require('express');
 const routerConsultaVacinaProtecao = express.Router();
 const {consultaVacinaProtecaoController} = require('../controllers/consultaVacinaProtecao-controller');
 
-// #swagger.name = 'consultaVacinaProtecao-controller'
-// #swagger.description = 'consultaVacinaProtecao controller.'
-// #swagger.tags = ['consultaVacinaProtecao']
-
-routerConsultaVacinaProtecao.get('/', consultaVacinaProtecaoController);
+routerConsultaVacinaProtecao.get('/:protecao', consultaVacinaProtecaoController
+// #swagger.tags = ['Vacina por Proteção']
+// #swagger.name = 'controller-consulta-vacina-protecao'
+// #swagger.description = 'Consulta vacina por proteção'
+);
 
 module.exports = {routerConsultaVacinaProtecao};
 
